syntax = "proto3";

package rivet.backend.pkg.db.get;

import "proto/common.proto";
import "proto/backend/db.proto";

message Request {
	repeated rivet.common.Uuid database_ids = 1;
}

message Response {
	repeated rivet.backend.db.Database databases = 1;
}
